force-app/main/default/objects/Full_Calendar_Configuration__mdt/Full_Calendar_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is use for to configure the view,mode,color scheme and settings of full calendar</description>
    <label>Full Calendar Configuration</label>
    <pluralLabel>Full Calendar Configurations</pluralLabel>
</CustomObject>