force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Business_Hours_Color__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Color__c</fullName>
    <description>This field is use for to give color business hours in full calendar</description>
    <label>Business Hours Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>