force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Calendar_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Border_Color__c</fullName>
    <description>This field is use for to give border color of Full Calendar</description>
    <label>Calendar Border Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>