force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Modal_Header_Footer_Color__c.field-meta.xml
<CustomField>
    <fullName>Modal_Header_Footer_Color__c</fullName>
    <label>Modal Header Footer Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>