force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Mode_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Mode_Button_Color__c</fullName>
    <description>This field is use for to save color scheme of calendar mode button</description>
    <label>Mode Button Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>