force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Non_Business_Hours_Color__c.field-meta.xml
<CustomField>
    <fullName>Non_Business_Hours_Color__c</fullName>
    <description>This field is use for to give specific class of non business hours</description>
    <label>Non Business Hours Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>