force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Scheduler_License_Key__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_License_Key__c</fullName>
    <description>This field is use for to save the License key of Full calendar</description>
    <label>Scheduler License Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>