force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Selected_Mode_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Selected_Mode_Button_Color__c</fullName>
    <description>This field is use to save the default selected color of mode button</description>
    <label>Selected Mode Button Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>