force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Selected_View_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Selected_View_Button_Color__c</fullName>
    <description>This field is use for to save the value of color which we will use for selected view button</description>
    <label>Selected View Button Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>