force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/Slot_Duration__c.field-meta.xml
<CustomField>
    <fullName>Slot_Duration__c</fullName>
    <label>Slot Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00:15</fullName>
                <default>true</default>
                <label>00:15</label>
            </value>
            <value>
                <fullName>00:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>