force-app/main/default/objects/Full_Calendar_Configuration__mdt/fields/View_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>View_Button_Color__c</fullName>
    <label>View Button Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>